--- a/apps/home-dashboard/src/app/app.component.html
+++ b/apps/home-dashboard/src/app/app.component.html
@@ -1,2 +1,3 @@
-<home-monorepo-nx-welcome></home-monorepo-nx-welcome>
 <router-outlet></router-outlet>
+<dashboard-card></dashboard-card>
+<button (click)="toggleTheme()">Toggle Theme</button>
