--- a/libs/ui-kit/src/lib/scss/_themes.scss
+++ b/libs/ui-kit/src/lib/scss/_themes.scss
@@ -1,9 +1,9 @@
+.light-theme {
+  --background-color: #fff;
+  --color: #000;
+}
+
 .dark-theme {
   --background-color: #000;
   --color: #fff;
-}
-
-:root {
-  --background-color: #fff;
-  --color: #000;
 }
