--- a/apps/home-dashboard/src/app/app.component.scss
+++ b/apps/home-dashboard/src/app/app.component.scss
@@ -2,5 +2,5 @@
   display: block;
   width: 100%;
   min-height: 100vh;
-  background-color: var(--background-color);
+  background-color: var(--primary-color);
 }
