--- a/libs/ui-kit/src/lib/card/card.component.scss
+++ b/libs/ui-kit/src/lib/card/card.component.scss
@@ -1,3 +1,7 @@
 :host {
-  color: var(--color);
+  display: block;
+  background-color: var(--secondary-color);
+  border-radius: 25px;
+  width: 100%;
+  color: var(--text-color);
 }
