--- a/libs/ui-kit/src/lib/scss/_themes.scss
+++ b/libs/ui-kit/src/lib/scss/_themes.scss
@@ -1,9 +1,8 @@
 .light-theme {
-  --background-color: #fff;
-  --color: #000;
 }
 
 .dark-theme {
-  --background-color: #000;
-  --color: #fff;
+  --primary-color: #151423;
+  --secondary-color: #26243f;
+  --text-color: #fff;
 }
