--- a/apps/home-dashboard/src/app/app.component.html
+++ b/apps/home-dashboard/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<!-- <dashboard-header></dashboard-header> -->
+<div class="row">
+  <dashboard-menu></dashboard-menu>
+  <router-outlet></router-outlet>
+</div>
