--- a/libs/cards/welcome-card/src/lib/welcome-card/welcome-card.component.html
+++ b/libs/cards/welcome-card/src/lib/welcome-card/welcome-card.component.html
@@ -1,1 +1,16 @@
-<p>welcome-card works!</p>
+<dashboard-card>
+  <div class="welcome-text-section">
+    <h1>Hi Jan!</h1>
+    <p class="welcome-text">
+      Welcome Home! The air quality is good & Fresh you can go out today
+    </p>
+    <div class="weather-info">
+      <div class="temperature">
+        <p class="temperature">+25°C</p>
+        <img src="https://www.svgrepo.com/show/51756/cloudy.svg" alt="" />
+      </div>
+      <p class="topic">Outdoor temperature</p>
+      <p class="description">Fuzzy cloudy weather</p>
+    </div>
+  </div>
+</dashboard-card>
