--- a/libs/ui-kit/src/lib/scss/_themes.scss
+++ b/libs/ui-kit/src/lib/scss/_themes.scss
@@ -2,7 +2,8 @@
 }
 
 .dark-theme {
-  --primary-color: #151423;
-  --secondary-color: #26243f;
-  --text-color: #fff;
+  --primary-color: #12121f;
+  --secondary-color: #151423;
+  --primary-text-color: #fff;
+  --secondary-text-color: #979797;
 }
