--- a/apps/home-dashboard/src/app/app.component.scss
+++ b/apps/home-dashboard/src/app/app.component.scss
@@ -1,6 +1,13 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  min-height: 100vh;
-  background-color: var(--primary-color);
+  height: 100vh;
+  overflow: hidden;
+}
+
+.row {
+  display: flex;
+  flex: 1;
+  height: 100%;
 }
