--- a/apps/home-dashboard/src/app/dashboard/dashboard.component.html
+++ b/apps/home-dashboard/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,20 @@
 <div class="left">
-  <dashboard-card>
-    <h1>Hi Jan!</h1>
-  </dashboard-card>
+  <div class="left-header"></div>
+  <div class="scroll-wrapper">
+    <dashboard-welcome-card></dashboard-welcome-card>
+    <div class="room-section">
+      <div class="info-row"><p>Jans Home</p></div>
+      <div class="devices">
+        <dashboard-device-power-card color="blue"></dashboard-device-power-card>
+        <dashboard-device-power-card color="red"></dashboard-device-power-card>
+        <dashboard-device-power-card color="purple">
+        </dashboard-device-power-card>
+        <dashboard-device-power-card
+          color="green"
+        ></dashboard-device-power-card>
+      </div>
+      <dashboard-welcome-card></dashboard-welcome-card>
+    </div>
+  </div>
 </div>
 <div class="right"></div>
