--- a/apps/home-dashboard/src/app/header/header.component.html
+++ b/apps/home-dashboard/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="left"></div>
+<div class="right">
+  <div class="left"></div>
+  <div class="right"></div>
+</div>
