--- a/libs/ui-kit/src/lib/card/card.component.scss
+++ b/libs/ui-kit/src/lib/card/card.component.scss
@@ -2,6 +2,13 @@
   display: block;
   background-color: var(--secondary-color);
   border-radius: 25px;
-  width: 100%;
-  color: var(--text-color);
+  box-shadow: -5px -5px 10px 3px #222237;
+  color: var(--primary-text-color);
+  border: 1px solid #2a2a50;
+  margin-bottom: 30px;
+  padding: 20px;
+
+  &.device-card {
+    background: var(--card-color);
+  }
 }
