--- a/libs/cards/device-power-card/src/lib/device-power-card/device-power-card.component.html
+++ b/libs/cards/device-power-card/src/lib/device-power-card/device-power-card.component.html
@@ -1,6 +1,9 @@
 <dashboard-card class="device-card">
   <div class="switch-row">
     <p>ON</p>
+    <dashboard-toggle-switch
+      (toggleChanged)="handleToggleChange($event)"
+    ></dashboard-toggle-switch>
   </div>
 
   <p>Refridgerator</p>
