--- a/apps/home-dashboard/src/app/dashboard/dashboard.component.scss
+++ b/apps/home-dashboard/src/app/dashboard/dashboard.component.scss
@@ -11,7 +11,6 @@
   flex-direction: column;
 
   .left-header {
-    //background-color: red;
     height: 160px;
     z-index: 2;
     margin-left: 15px;
@@ -34,9 +33,11 @@
       }
       .devices {
         display: flex;
-        gap: 30px;
+        flex-wrap: wrap;
+        $gap: 30px;
+        gap: $gap;
         dashboard-device-power-card {
-          flex: 1;
+          flex: 1 0 calc(25% - #{$gap});
         }
       }
     }
