--- a/libs/cards/device-power-card/src/lib/device-power-card/device-power-card.component.html
+++ b/libs/cards/device-power-card/src/lib/device-power-card/device-power-card.component.html
@@ -6,6 +6,7 @@
     <dashboard-toggle-switch
       [isDeviceOn]="isDeviceOn"
       (toggleChanged)="handleToggleChange($event)"
+      [style.--toggle-color]="toggleColor"
     ></dashboard-toggle-switch>
   </div>
 
