--- a/apps/home-dashboard/src/app/dashboard/dashboard.component.scss
+++ b/apps/home-dashboard/src/app/dashboard/dashboard.component.scss
@@ -25,6 +25,9 @@
       .info-row {
         height: 35px;
         margin-bottom: 15px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         p {
           font-size: 22px;
           color: var(--secondary-text-color);
