--- a/apps/home-dashboard/src/app/dashboard/dashboard.component.html
+++ b/apps/home-dashboard/src/app/dashboard/dashboard.component.html
@@ -1,16 +1,18 @@
 <div class="left">
-  <div class="left-header"></div>
+  <div class="header"></div>
+
+  <dashboard-welcome-card></dashboard-welcome-card>
+
+  <div class="info-row">
+    <p>Jans Home</p>
+    <dashboard-dropdown
+      [options]="rooms"
+      [selectedOption]="selectedRoom"
+      (selectedOptionChange)="changeSelectedRoom($event)"
+    ></dashboard-dropdown>
+  </div>
   <div class="scroll-wrapper">
-    <dashboard-welcome-card></dashboard-welcome-card>
     <div class="room-section">
-      <div class="info-row">
-        <p>Jans Home</p>
-        <dashboard-dropdown
-          [options]="rooms"
-          [selectedOption]="selectedRoom"
-          (selectedOptionChange)="changeRoom($event)"
-        ></dashboard-dropdown>
-      </div>
       <div class="devices">
         <dashboard-device-power-card
           *ngFor="
@@ -25,4 +27,31 @@
     </div>
   </div>
 </div>
-<div class="right"></div>
+<div class="right">
+  <div class="header"></div>
+  <div class="info-row">
+    <p>Jans Home</p>
+    <dashboard-dropdown
+      [options]="states"
+      [selectedOption]="selectedState"
+      (selectedOptionChange)="changeSelectedState($event)"
+    ></dashboard-dropdown>
+  </div>
+  <div class="scroll-wrapper">
+    <div class="room-section">
+      <div class="devices">
+        <dashboard-device-power-card
+          *ngFor="
+            let device of devices
+              | filterBy
+                : (selectedState === 'Alle'
+                    ? null
+                    : selectedState.toLowerCase())
+                : 'state'
+          "
+          [device]="device"
+        ></dashboard-device-power-card>
+      </div>
+    </div>
+  </div>
+</div>
