--- a/apps/home-dashboard/src/app/dashboard/dashboard.component.html
+++ b/apps/home-dashboard/src/app/dashboard/dashboard.component.html
@@ -46,8 +46,8 @@
               | filterBy
                 : (selectedState === 'Alle'
                     ? null
-                    : selectedState.toLowerCase())
-                : 'state'
+                    : selectedState.toLowerCase() === 'on' ?? false)
+                : 'on'
           "
           [device]="device"
         ></dashboard-device-power-card>
